--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.2",
     "@angular/ssr": "^17.0.0",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "ngx-toastr": "^17.0.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
     "tslib": "^2.3.0",
